Fixed Overlapping of card and input form. Reduced card padding

--- a/styles.css
+++ b/styles.css
@@ -146,13 +146,13 @@ body {
   border-radius: 0.8em;
 
   height: fit-content;
-  padding: 2em;
+  padding: 1em;
 
   position: absolute;
   bottom: 0;
   z-index: 1;
 
-  transform: translateY(50%);
+  transform: translateY(65%);
 }
 
 .divider {
